--- a/test_hyper/Cargo.toml
+++ b/test_hyper/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bytes = "0.5.5"
-hyper = "0.13"
 tokio = { version = "0.2", features = ["full"] }
+hyper = "0.13"
+sqlx = { version = "0.3", default-features = false, features = [ "runtime-tokio", "mysql" ] }
+futures = "0.3"
