--- a/test_sqlx/Cargo.toml
+++ b/test_sqlx/Cargo.toml
@@ -10,3 +10,4 @@ edition = "2018"
 tokio = { version = "0.2", features = ["full"] }
 sqlx = { version = "0.3", default-features = false, features = [ "runtime-tokio", "macros", "mysql" ] }
 futures = "0.3"
+futures-core = "0.3"
